menambahkan link CV pada button download CV

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <h1 class="text-3xl font-bold">Agus Anwar</h1>
               <h3 class="mb-4">Front End Developer</h3>
               <button
+                id="btnGoogle"
                 class="bg-gray-800 w-32 h-8 rounded-md border-2 hover:text-red-400 hover:border-red-400"
               >
                 Download CV
@@ -240,5 +241,6 @@
         </footer>
       </div>
     </section>
+    <script src="/java.js"></script>
   </body>
 </html>
